tests/models/enum/named/unit/fail/min_items.stderr
error: Support condition is alias, default
 --> tests/models/enum/named/unit/fail/min_items.rs:6:9
  |
6 |         value: ()
  |         ^^^^^
